add todo, pending todo, done todo initial

--- a/task-planner-ui/angular.json
+++ b/task-planner-ui/angular.json
@@ -27,7 +27,9 @@
               }
             ],
             "styles": [
-              "src/styles.scss"
+              "src/styles.scss",
+              "node_modules/primeicons/primeicons.css",
+              "node_modules/font-awesome/css/font-awesome.css"
             ]
           },
           "configurations": {
