--- a/task-planner-ui/package.json
+++ b/task-planner-ui/package.json
@@ -20,19 +20,27 @@
   },
   "private": true,
   "dependencies": {
-    "@angular/common": "^20.1.0",
-    "@angular/compiler": "^20.1.0",
-    "@angular/core": "^20.1.0",
-    "@angular/forms": "^20.1.0",
-    "@angular/platform-browser": "^20.1.0",
-    "@angular/router": "^20.1.0",
+    "@angular/animations": "20.1.3",
+    "@angular/cdk": "20.1.3",
+    "@angular/cli": "20.1.3",
+    "@angular/common": "20.1.3",
+    "@angular/compiler": "20.1.3",
+    "@angular/core": "20.1.3",
+    "@angular/forms": "20.1.3",
+    "@angular/platform-browser": "20.1.3",
+    "@angular/platform-browser-dynamic": "20.1.3",
+    "@angular/router": "20.1.3",
+    "@primeuix/themes": "^1.2.1",
+    "font-awesome": "^4.7.0",
+    "primeicons": "^7.0.0",
+    "primeng": "^20.0.0",
     "rxjs": "~7.8.0",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
-    "@angular/build": "^20.1.1",
-    "@angular/cli": "^20.1.1",
-    "@angular/compiler-cli": "^20.1.0",
+    "@angular/build": "20.1.3",
+    "@angular/cli": "20.1.3",
+    "@angular/compiler-cli": "20.1.3",
     "@types/jasmine": "~5.1.0",
     "jasmine-core": "~5.8.0",
     "karma": "~6.4.0",
