--- a/build.gradle
+++ b/build.gradle
@@ -38,7 +38,7 @@ tasks.register('buildAngular', NpmTask) {
 	dependsOn npmInstall
 	args = ['run', 'build']
 	inputs.files('task-planner-ui/package.json', 'task-planner-ui/angular.json')
-	outputs.dir('task-planner-ui/dist')
+	//outputs.dir('task-planner-ui/dist')
 	workingDir = file('task-planner-ui')  // Add this line
 }
 
@@ -54,12 +54,12 @@ processResources {
 }
 
 dependencies {
-//	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-//	implementation 'org.springframework.boot:spring-boot-starter-thymeleaf'
+	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
 	implementation 'org.springframework.boot:spring-boot-starter-web'
 	compileOnly 'org.projectlombok:lombok'
-//	runtimeOnly 'com.mysql:mysql-connector-j'
+	runtimeOnly 'com.mysql:mysql-connector-j'
 	annotationProcessor 'org.projectlombok:lombok'
+	implementation 'org.springframework.boot:spring-boot-starter-validation'
 	testImplementation 'org.springframework.boot:spring-boot-starter-test'
 	testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
 }
