--- a/task-planner-ui/angular.json
+++ b/task-planner-ui/angular.json
@@ -46,7 +46,8 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all"
+              "outputHashing": "all",
+              "outputPath": "../src/main/resources/static"
             },
             "development": {
               "optimization": false,
