--- a/task-planner-ui/angular.json
+++ b/task-planner-ui/angular.json
@@ -46,8 +46,7 @@
                   "maximumError": "8kB"
                 }
               ],
-              "outputHashing": "all",
-              "outputPath": "../src/main/resources/static"
+              "outputHashing": "all"
             },
             "development": {
               "optimization": false,
