--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,6 +1,9 @@
 spring.application.name=task-planner
 spring.mvc.static-path-pattern=/static/**
 
+management.endpoints.web.exposure.include=health,info,readiness,liveness
+management.endpoint.health.probes.enabled=true
+
 spring.datasource.url=${MYSQL_URL:jdbc:mysql://localhost:3306/todo_db}
 spring.datasource.username=${MYSQL_USER:root}
 spring.datasource.password=${MYSQL_PASSWORD:todouser}
