--- a/k8s/mysql-statefulset.yaml
+++ b/k8s/mysql-statefulset.yaml
@@ -17,13 +17,8 @@ spec:
     spec:
       containers:
         - name: mysql
-          image: mysql:8.0
+          image: mysql:8.0.43
           env:
-            - name: MYSQL_ROOT_USER
-              valueFrom:
-                configMapKeyRef:
-                  name: task-planner-configmap
-                  key: MYSQL_ROOT_USER
             - name: MYSQL_ROOT_PASSWORD
               valueFrom:
                 secretKeyRef:
@@ -37,16 +32,26 @@ spec:
               mountPath: /var/lib/mysql
           livenessProbe:
             exec:
-              command: ["mysqladmin", "ping", "-h", "localhost"]
+              command:
+                - sh
+                - -c
+                - mysqladmin ping -h "$HOSTNAME"
             initialDelaySeconds: 30
-            periodSeconds: 10
             timeoutSeconds: 5
+            periodSeconds: 10
+            failureThreshold: 3
+
           readinessProbe:
             exec:
-              command: ["mysql", "-u", "{MYSQL_ROOT_USER}", "-p${MYSQL_ROOT_PASSWORD}", "-e", "SELECT 1"]
+              command:
+                - /bin/sh
+                - -c
+                - |
+                  mysql -u root -p"$MYSQL_ROOT_PASSWORD" -e "SELECT 1"
             initialDelaySeconds: 5
-            periodSeconds: 5
             timeoutSeconds: 1
+            periodSeconds: 5
+            failureThreshold: 3
   volumeClaimTemplates:
     - metadata:
         name: mysql-data
@@ -67,5 +72,6 @@ spec:
   selector:
     app: mysql
   ports:
-    - port: 3306
-      name: mysql
+    - protocol: TCP
+      port: 3306
+      targetPort: 3306
