--- a/k8s/task-planner-deployment.yaml
+++ b/k8s/task-planner-deployment.yaml
@@ -14,13 +14,12 @@ spec:
     metadata:
       labels:
         app: task-planner
-      namespace: task-planner
     spec:
       containers:
         - name: task-planner
           image: shivamshivam01/task-planner:latest
           ports:
-            - containerPort: 8080
+            - containerPort: 8081
           env:
             - name: MYSQL_HOST
               valueFrom:
@@ -51,28 +50,30 @@ spec:
                   key: MYSQL_TODO_PASSWORD
           livenessProbe:
             httpGet:
-              path: /actuator/health/liveness
-              port: 8080
-            initialDelaySeconds: 30
+              path: actuator/health/liveness
+              port: 8081
+            initialDelaySeconds: 15
             periodSeconds: 10
+            failureThreshold: 3
           readinessProbe:
             httpGet:
-              path: /actuator/health/readiness
-              port: 8080
-            initialDelaySeconds: 30
+              path: actuator/health/readiness
+              port: 8081
+            initialDelaySeconds: 15
             periodSeconds: 10
-          resources:
-            requests:
-              cpu: "100m"
-              memory: "512Mi"
-            limits:
-              cpu: "500m"
-              memory: "1024Mi"
-      strategy:
-        type: RollingUpdate
-        rollingUpdate:
-          maxUnavailable: 1
-          maxSurge: 1
+            failureThreshold: 3
+          startupProbe:
+            httpGet:
+              path: actuator/health
+              port: 8081
+            initialDelaySeconds: 15
+            periodSeconds: 10
+            failureThreshold: 3
+  strategy:
+    type: RollingUpdate
+    rollingUpdate:
+      maxUnavailable: 1
+      maxSurge: 1
 ---
 apiVersion: v1
 kind: Service
@@ -85,4 +86,4 @@ spec:
   ports:
     - protocol: TCP
       port: 80
-      targetPort: 8080
+      targetPort: 8081
