--- a/k8s/mysql-init-script-configmap.yaml
+++ b/k8s/mysql-init-script-configmap.yaml
@@ -22,3 +22,9 @@ data:
         created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
         updated_at DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
     );
+    INSERT INTO todo (id, title, priority, description, completed) VALUES (1, 'title -1', 'High', 'This is a high priority todo', FALSE);
+    INSERT INTO todo (id, title, priority, description, completed) VALUES (2, 'title -2', 'Medium', 'This is a medium priority todo', TRUE);
+    INSERT INTO todo (id, title, priority, description, completed) VALUES (3, 'title -3', 'Low', 'This is a low priority todo', FALSE);
+    INSERT INTO todo (id, title, priority, description, completed) VALUES (4, 'title -4', 'High', 'This is a high priority todo', TRUE);
+    INSERT INTO todo (id, title, priority, description, completed) VALUES (5, 'title -5', 'Medium', 'This is a medium priority todo', FALSE);
+    
