--- a/k8s/mysql-init-job.yaml
+++ b/k8s/mysql-init-job.yaml
@@ -40,9 +40,6 @@ spec:
                 secretKeyRef:
                   name: task-planner-secret
                   key: MYSQL_TODO_PASSWORD
-          volumeMounts:
-            - name: init-sql
-              mountPath: /init
           command:
             - /bin/bash
             - -c
@@ -59,10 +56,25 @@ spec:
                 sleep 5
               done
               echo "MySQL is ready! Running init scripts..."
-              envsubst < /init/init-db-template.sql | mysql -h "$MYSQL_HOST" -u"$MYSQL_USER" -p"$MYSQL_PASSWORD"
-              echo "init scripts run step is completed..."
+              mysql -h "$MYSQL_HOST" -u"$MYSQL_USER" -p"$MYSQL_PASSWORD" <<EOF
+              CREATE DATABASE IF NOT EXISTS ${DB_NAME};
+              CREATE USER IF NOT EXISTS '${DB_USER}'@'%' IDENTIFIED BY '${DB_PASSWORD}';
+              GRANT ALL PRIVILEGES ON ${DB_NAME}.* TO '${DB_USER}'@'%';
+              FLUSH PRIVILEGES;
+              USE ${DB_NAME};
+              CREATE TABLE IF NOT EXISTS todo (
+              id BIGINT PRIMARY KEY AUTO_INCREMENT,
+              title VARCHAR(255) NOT NULL,
+              priority VARCHAR(50),
+              description TEXT,
+              completed BOOLEAN DEFAULT FALSE,
+              created_at DATETIME DEFAULT CURRENT_TIMESTAMP,
+              updated_at DATETIME DEFAULT CURRENT_TIMESTAMP ON UPDATE CURRENT_TIMESTAMP
+              );
+              INSERT INTO todo (id, title, priority, description, completed) VALUES (1, 'title -1', 'High', 'This is a high priority todo', FALSE);
+              INSERT INTO todo (id, title, priority, description, completed) VALUES (2, 'title -2', 'Medium', 'This is a medium priority todo', TRUE);
+              INSERT INTO todo (id, title, priority, description, completed) VALUES (3, 'title -3', 'Low', 'This is a low priority todo', FALSE);
+              INSERT INTO todo (id, title, priority, description, completed) VALUES (4, 'title -4', 'High', 'This is a high priority todo', TRUE);
+              INSERT INTO todo (id, title, priority, description, completed) VALUES (5, 'title -5', 'Medium', 'This is a medium priority todo', FALSE);
+              EOF
       restartPolicy: OnFailure
-      volumes:
-        - name: init-sql
-          configMap:
-            name: mysql-init-script-configmap
