--- a/k8s/mysql-init-job.yaml
+++ b/k8s/mysql-init-job.yaml
@@ -45,7 +45,7 @@ spec:
             - -c
             - |
               echo "Waiting for MySQL DNS to be resolvable..."
-              until getent hosts mysql-0.mysql.task-planner.svc.cluster.local; do
+              until getent hosts "$MYSQL_HOST"; do
                 echo "Waiting for DNS to resolve..."
                 sleep 5
               done
