--- a/k8s/mysql-statefulset.yaml
+++ b/k8s/mysql-statefulset.yaml
@@ -22,12 +22,25 @@ spec:
                 secretKeyRef:
                   name: task-planner-secret
                   key: MYSQL_ROOT_PASSWORD
+            - name: MYSQL_ROOT_USER
+              valueFrom:
+                configMapKeyRef:
+                  name: task-planner-configmap
+                  key: MYSQL_ROOT_USER
           ports:
             - containerPort: 3306
               name: mysql
           volumeMounts:
             - name: mysql-data
               mountPath: /var/lib/mysql
+          command:
+            - /bin/bash
+            - -c
+            - |
+              echo '#!/bin/bash' > /healthcheck.sh
+              echo 'mysql -h 127.0.0.1 -u "${MYSQL_ROOT_USER}" -p"${MYSQL_ROOT_PASSWORD}" -e "SELECT 1"' >> /healthcheck.sh
+              chmod +x /healthcheck.sh
+              exec docker-entrypoint.sh mysqld
           livenessProbe:
             exec:
               command:
@@ -38,24 +51,20 @@ spec:
             timeoutSeconds: 5
             periodSeconds: 10
             failureThreshold: 3
-
           readinessProbe:
             exec:
               command:
-                - /bin/sh
-                - -c
-                - |
-                  mysql -u root -p"$MYSQL_ROOT_PASSWORD" -e "SELECT 1"
+                - /bin/bash
+                - /healthcheck.sh
             initialDelaySeconds: 5
-            timeoutSeconds: 1
+            timeoutSeconds: 2
             periodSeconds: 5
             failureThreshold: 3
   volumeClaimTemplates:
     - metadata:
         name: mysql-data
       spec:
-        storageClassName: standard-rwo
-        accessModes: [ "ReadWriteOnce" ]
+        accessModes: ["ReadWriteOnce"]
         resources:
           requests:
             storage: 1Gi
